Snapshot d6bac927e1

* #4667 Do not display XO outside the mesh view. (marco)
* #4687 Use the right free function, fix a crash. (sjoerd)
* #4724 Display meshbox invite palette menu with colored
  activity icon (erikos)
* Always checkin to the DS from a new file. (tomeu)

Snapshot c682a5e241

- #4570: Fix alt-tab and ctrl-alt-tab behavior
- #3605: Make donut activity size fixed
- #4644: Ctrl-Q does not kill Journal
- #4571: Scroll buttons should not be reversed for Arabic

Snapshot 55864fa3f6

* Support for the espeak service. (codyl)
* Fix typo in activity launching code. (marco)

Snapshot e23f012e08

* Launch a few activities outside rainbow containers. (marco)

Snapshot 3e491c2dc7

* #4715: Filter new items that appear in the mesh view. (tomeu)
* #4716: Filter correctly activity icons in the mesh view. (tomeu)
* Use HOME/.i18n in control panel and reset jabber_registered to False (erikos)

Snapshot dae3ebe8d1

Snapshot 306d32832f

* Associate ctrl+s to keep. (rwh)

Snapshot 73cae198f5

* Remove the startup sound for now, to not break audio
  for all the activities. (marco)

Snapshot 0a9676171d

* #4650: Failure to write journal files. (marco)

Snapshot ee8712d1c4

* #3119: Implement some basic search capabilities in the mesh view. (tomeu)

Snapshot d456f6c633

* New experimental screenshot code. (marco)

Snapshot e748f756c0

* #4618: Make the shell service more resilient to failure. (tomeu)

Snapshot 39aca0154d

* Get bundle installation to work again. (marco)

Snapshot b6422678e6

* #1941 Call FocusSearch method for popping up the journal. (rwh)

Snapshot 2df96b9af7

* #4552 Allow to open images in Paint (marco)
* #4518: Encode nickname in UTF-8 when writing it out to .sugar/*/config (smcv)
* sugar-control: Use NM for radio on/off, check for superuser (erikos)

Snapshot b72f00e30b

* #4517 Do not require a TakeScreenshot method on the dbus service (marco)
* Add wep type combo. (dcbw)

Snapshot 8c89bfaed7
