@@ -42,8 +42,8 @@ class BuddyIcon(CanvasIcon):
 
     def _update_color(self):
         if self._greyed_out:
-            self.props.stroke_color = style.COLOR_INACTIVE_STROKE.get_svg()
-            self.props.fill_color = style.COLOR_INACTIVE_FILL.get_svg()
+            self.props.stroke_color = '#D5D5D5'
+            self.props.fill_color = '#E5E5E5'
         else:
             self.props.xo_color = self._buddy.get_color()
 
